# trilsby-api

./: Cargo.toml  README.md
server/src/: main.rs
sqlite_api/src/: lib.rs
sqlite_setup/src/: main.rs
