[package]
name = "trilsby-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
rusqlite = { version = "0.32.0" }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio-util = "0.7.10"
tokio = { version = "1", features = ["full"] }
